<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="shapeshifter_title">ShapeShifter</string>
    <string name="shapeshiftos_title">ShapeShiftOS Settings</string>
    <string name="navigation_actions_title">Actions</string>
    <string name="navigation_interface_title">Interface</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_system_title">System/Misc</string>
    <string name="accessibility_description">Screen menu</string>
    <string name="accessibility_item_description">%1$s menu item</string>
    <string name="powerbutton_title">Power button</string>
    <string name="powerbutton_summary">Configure additional options &amp; actions</string>
    <string name="navigationbar_title">Navigation</string>
    <string name="navigationbar_summary">Configure system navigation options</string>
    <string name="gesture_options_title">Gestures</string>
    <string name="gesture_options_summary">Enable/disable device specific user actions</string>
    <string name="volume_rocker_title">Volume rocker</string>
    <string name="volume_rocker_summary">Set default behavior and actions for vol +/- keys</string>
    <string name="hw_keys_title">Hardware keys</string>
    <string name="hw_keys_summary">Assign actions for physical navigation buttons</string>
    <string name="quick_settings_title">Quick settings</string>
    <string name="quick_settings_summary">Customize the overall view &amp; functionality</string>
    <string name="headsup_title">Heads-up</string>
    <string name="headsup_summary">Configure Heads-up options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure look &amp; feel of recent apps view</string>
    <string name="themer_title">Themer</string>
    <string name="themer_summary">Browse and select installed themes</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize how battery is displayed</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Set view options of time &amp; date in statusbar</string>
    <string name="traffic_title">Network indicator</string>
    <string name="traffic_summary">Enable &amp; configure network indicator in statusbar</string>
    <string name="status_bar_items_title">Statusbar items</string>
    <string name="status_bar_items_summary">Configure statusbar indicators</string>
    <string name="lockscreen_aosp_title">Native controls</string>
    <string name="lockscreen_aosp_summary">Configure AOSP options for lockscreen &amp; ambient display</string>
    <string name="lockscreen_general_title">General options</string>
    <string name="lockscreen_general_summary">Add or remove visual elements of your lockscreen</string>
    <string name="lockscreen_tuner_title">Lockscreen tuner</string>
    <string name="lockscreen_tuner_summary">Add or remove tuner parts of your lockscreen</string>
    <string name="lockscreen_weather_title">Weather options</string>
    <string name="lockscreen_weather_summary">Configure lockscreen weather</string>
    <string name="lockscreen_fod_summary">Configure settings related to the FOD view</string>
    <string name="custom_fod_icon_explainer">To use your own static FOD icon, use the OPFP app. Make sure to have the animated FOD icon disabled when using a custom icon in OPFP.</string>
    <string name="custom_fod_icon_png_explainer">You can download your own custom FOD icon PNGs from Telegram channels such as FODicons and OP_fps. Use a local gallery and not online services such as Google Photos to pick FOD icons.</string>
    <string name="animations_category_title">Animations</string>
    <string name="animations_category_summary">Set custom animations for certain transitions</string>
    <string name="general_notifications_title">General notifications</string>
    <string name="general_notifications_summary">Miscellaneous notification controls</string>
    <string name="notification_headers_section_title">Notification headers</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Uncategorized options</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_summary">List of recent commits added to ShapeShiftOS</string>
    <string name="led_settings_title">LED settings</string>
    <string name="led_settings_summary">Configure the LED light for supported options</string>
    <string name="empty_category_title">No extra features yet...</string>
    <string name="empty_category_description">However, new features may be added here soon. Check back after future updates!</string>
    <string name="dummy_string"> </string>
    <string name="active_edge_title">Active Edge</string>
    <string name="ambient_music_display">Music ticker</string>
    <string name="aware_settings_title">Motion Sense</string>
    <string name="battery_style_statusbar">Statusbar battery</string>
    <string name="battery_style_qs">Quick panel battery</string>
    <string name="brightness_control_category">Brightness control</string>
    <string name="custom_header_title">Custom header</string>
    <string name="led_notifications_title">LED notifications</string>
    <string name="led_battery_title">Battery LED</string>
    <string name="volume_steps_title">Volume steps</string>
    <string name="lockscreen_fod_category">Fingerprint On Display</string>
    <string name="navigation_navigation_bar_category">Navigation</string>
    <string name="gestures_navigation_bar_category">Gestures</string>
    <string name="navbar_gestures_title">Navigation gesture options</string>
    <string name="navbar_gestures_summary">Choose buttons or gestures to navigate your device</string>
    <string name="navigation_bar_invert_layout_title">Invert layout</string>
    <string name="navigation_bar_invert_layout_summary">Inverts the layout of the navigation bar and other items, such as the IME switcher</string>
    <string name="pixel_navbar_anim_title">Pixel animation</string>
    <string name="pixel_navbar_anim_summary">Toggle home button animation</string>
    <string name="notification_headers_title">Notification Headers</string>
    <string name="notification_headers_summary">Show headers in the notification shade</string>
    <string name="center_notification_headers_title">Center notification headers</string>
    <string name="center_notification_headers_summary">Whether to Center notification headers\nRequires a SystemUI restart</string>
    <string name="volume_key_cursor_control_title">Volume key cursor control</string>
    <string name="charging_animation_title">Charging animation</string>
    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
    <string name="ringtone_focus_mode_title">When headset connected, incoming call plays on</string>
    <string name="wakeup_when_plugged_unplugged_title">Wake up on charge</string>
    <string name="wakeup_when_plugged_unplugged_summary">Wake up device if charger is plugged/unplugged</string>
    <string name="usb_default_config_title">USB configuration</string>
    <string name="usb_default_config_summary">Choose the default behavior when connected to a device via USB</string>
    <string name="lockscreen_media_category">Music</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="swap_volume_buttons_title">Reorient</string>
    <string name="swap_volume_buttons_summary">Swap volume buttons when the screen is rotated</string>
    <string name="horizon_light_title">Horizon light</string>
    <string name="horizon_light_summary">Light ambient edges for pulsing notifications</string>
    <string name="notification_sound_vib_screen_on_title">Notification sound if active</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
    <string name="fod_gesture_title">Screen off FOD</string>
    <string name="fod_gesture_summary">Allows unlocking the device without having to wake up the screen first</string>
    <string name="fod_night_light_title">Disable night light when showing FOD</string>
    <string name="fod_night_light_summary">Disable night light on lockscreen if FOD is active. Disabling this option might affect your fingerprint accuracy with night light on.</string>
    <string name="lock_fp_icon_title">Fingerprint icon on lockscreen</string>
    <string name="lock_fp_icon_summary">Display a fingerprint icon under the clock date when it is possible to unlock using fingerprint</string>
    <string name="back_gesture_arrow_message">Back gesture animation</string>
    <string name="back_gesture_arrow_summary">Show an animated arrow for back gesture</string>
    <string name="back_gesture_haptic_title">Haptic feedback</string>
    <string name="back_gesture_haptic_summary">Enable haptic tick effect on back gesture</string>
    <string name="pocket_judge_title">Pocket detection</string>
    <string name="pocket_judge_summary">Block screen inputs when device is in pocket</string>
    <string name="volume_panel">Volume panel style</string>
    <string name="volume_panel_stock_val" translatable="false">com.android.systemui.volume</string>
    <string name="lockscreen_lock_icon_title">Lock icon</string>
    <string name="lockscreen_lock_icon_summary">Display lock icon on the lockscreen</string>
    <string name="lockscreen_status_bar_title">Status bar</string>
    <string name="lockscreen_status_bar_summary">Display status bar on the lockscreen</string>
    <string name="volume_steps_summary">Customize number of steps in volume panel</string>
    <string name="allow_signature_fake">Allow signature spoofing</string>
    <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="lockscreen_charging_animation_title">Lockscreen charging animation</string>
    <string name="lockscreen_charging_animation_summary">Display a fancy animation when the device is charging</string>
    <string name="smart_pixels_title">Smart Pixels</string>
    <string name="smart_pixels_summary">Save battery by shutting off extra pixels</string>
    <string name="fprint_subcat">Fingerprint</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
    <string name="fprint_success_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_success_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fod_recog_animation">Fingerprint animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Select fingerprint animation effect</string>
    <string name="fod_pressed_color_title">Fingerprint pressed color</string>
    <string name="sensor_block_title">Sensor block per-package</string>
    <string name="sensor_block_summary">Block access to certain sensors for some apps to save battery</string>
    <string name="ticker_screen_title">Ticker</string>
    <string name="ticker_screen_summary">Show notifications ticker-style in status bar</string>
    <string name="fod_icon_picker_title">Fingerprint icon</string>
</resources>