<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 ShapeShiftOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/general_notifications_title" >

    <PreferenceCategory
        android:title="@string/general_notifications_title">

    <!-- Supress notifications if screen is on -->
    <com.ssos.support.preferences.SystemSettingSwitchPreference
       android:key="notification_sound_vib_screen_on"
       android:title="@string/notification_sound_vib_screen_on_title"
       android:summary="@string/notification_sound_vib_screen_on_summary"
       android:defaultValue="true" />

    <com.ssos.support.preferences.SystemSettingSwitchPreference
        android:key="status_bar_notif_count"
        android:title="@string/status_bar_notif_count_title"
        android:summary="@string/status_bar_notif_count_summary"
        android:defaultValue="false" />

    <Preference
        android:key="ticker_settings"
        android:title="@string/ticker_screen_title"
        android:summary="@string/ticker_screen_summary"
        android:fragment="com.ssos.shapeshifter.fragments.statusbar.Ticker"/>

    <!-- Horizon notifications light -->
    <com.ssos.support.preferences.SystemSettingMasterSwitchPreference
        android:key="pulse_ambient_light"
        android:title="@string/horizon_light_title"
        android:summary="@string/horizon_light_summary"
        android:fragment="com.ssos.shapeshifter.fragments.system_misc.HorizonLightSettings"
        android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notification_headers_section_title">

        <com.ssos.support.preferences.SystemSettingSwitchPreference
           android:key="notification_headers"
           android:title="@string/notification_headers_title"
           android:summary="@string/notification_headers_summary"
           android:defaultValue="true" />

        <com.ssos.support.preferences.SystemSettingSwitchPreference
           android:key="center_notification_headers"
           android:title="@string/center_notification_headers_title"
           android:summary="@string/center_notification_headers_summary"
           android:dependency="notification_headers"
           android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
