<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 ShapeShiftOS

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/navigationbar_title" >

    <Preference
        android:key="system_navigation_settings_preferences"
        android:title="@string/navbar_gestures_title"
        android:summary="@string/navbar_gestures_summary"
        android:fragment="com.android.settings.gestures.SystemNavigationGestureSettings"
        settings:controller="com.android.settings.gestures.SystemNavigationPreferenceController" />


    <PreferenceCategory
        android:title="@string/gestures_navigation_bar_category">

        <com.ssos.support.preferences.SystemSettingSwitchPreference
            android:key="back_gesture_haptic"
            android:title="@string/back_gesture_haptic_title"
            android:summary="@string/back_gesture_haptic_summary"
            android:defaultValue="false" />

        <com.ssos.support.preferences.SecureSettingSwitchPreference 
            android:key="show_back_arrow_gesture"
            android:title="@string/back_gesture_arrow_message"
            android:summary="@string/back_gesture_arrow_summary"
            android:defaultValue="true" />

        <com.ssos.support.preferences.SecureSettingSwitchPreference
            android:key="assist_lock_handles"
            android:title="@string/assist_lock_handles_title"
            android:summary="@string/assist_lock_handles_summary"
            android:defaultValue="@*android:bool/config_supportsInDisplayFingerprint" />

        <com.ssos.support.preferences.SecureSettingSwitchPreference
            android:key="assist_global_handles"
            android:title="@string/assist_global_handles_title"
            android:summary="@string/assist_global_handles_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/navigation_navigation_bar_category">

        <com.ssos.support.preferences.SystemSettingSwitchPreference
            android:key="pixel_nav_animation"
            android:title="@string/pixel_navbar_anim_title"
            android:summary="@string/pixel_navbar_anim_summary"
            android:defaultValue="true" />

        <com.ssos.support.preferences.SecureSettingSwitchPreference
            android:key="sysui_nav_bar_inverse"
            android:title="@string/navigation_bar_invert_layout_title"
            android:summary="@string/navigation_bar_invert_layout_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
