<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 ShapeShiftOS
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/lockscreen_fod_category" >
  
          <!-- FOD icon picker -->
        <Preference
            android:key="fod_icon_picker_category"
            android:title="@string/fod_icon_picker_title"
            android:summary="@string/fod_icon_picker_summary"
            android:fragment="com.ssos.shapeshifter.fragments.lockscreen.FODIconPickerFragment" />

        <com.ssos.support.preferences.SystemSettingSwitchPreference
            android:key="fod_recognizing_animation"
            android:title="@string/fod_recog_animation"
            android:summary="@string/fod_recog_animation_summary"
            android:defaultValue="false" />

        <com.ssos.support.preferences.SystemSettingListPreference
            android:key="fod_anim"
            android:title="@string/fod_recog_animation_effect_title"
            android:summary="%s"
            android:entries="@array/fod_recog_animation_entries"
            android:entryValues="@array/fod_recog_animation_values"
            android:defaultValue="0"
            android:dependency="fod_recognizing_animation" />

        <com.ssos.support.preferences.SystemSettingListPreference
            android:key="fod_color"
            android:title="@string/fod_pressed_color_title"
            android:summary="%s"
            android:entries="@array/fod_pressed_color_entries"
            android:entryValues="@array/fod_pressed_color_values"
            android:defaultValue="@*android:integer/config_fod_pressed_color" />

        <com.ssos.support.preferences.SystemSettingSwitchPreference
            android:key="fod_gesture"
            android:title="@string/fod_gesture_title"
            android:summary="@string/fod_gesture_summary"
            android:defaultValue="false" />

        <!-- FOD Nightlight -->
        <com.ssos.support.preferences.SystemSettingSwitchPreference
            android:key="fod_night_light"
            android:title="@string/fod_night_light_title"
            android:summary="@string/fod_night_light_summary"
            android:defaultValue="@*android:bool/disable_fod_night_light"  />

  </PreferenceScreen>
